# social-network-app

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.chat  README.md  client.py  docker-compose.dev.yml  docker-compose.yml  main.py  normalized_words.txt  obscene_words.txt  pyproject.toml  secret  secret.pub  server.py  test.py  test_storage.py  voices_firebase_secrets.json
.github/actions/: ssh-context.yaml
.github/workflows/: deploy-dev.yaml  dev.yaml  pull-request.yaml
admin/: docker-compose.yml  pyproject.toml
admin/voices_admin/: settings.py
data/email/: confirm_email.html
migrations/: env.py
migrations/versions/: 2023-05-07_16-27_c51f8b7a3d6b.py  2023-05-08_01-29_d25475720458.py  2023-05-19_14-51_aebd719bf2f3.py  2023-05-22_13-52_3161b987602a.py  2023-05-22_14-13_f6cad55e4818.py  2023-05-22_23-15_09a21554deff.py  2023-06-27_21-13_900da1a8ef74.py  2023-06-27_23-09_9295fa86cf5d.py  2023-06-28_19-53_74bd3f9cac5e.py  2023-06-29_20-09_197f0a3d538a.py  2023-07-03_21-35_f6730c589af8.py  2023-08-08_08-48_be717b2d5e28.py  2023-08-09_19-46_3454c58cc663.py  2023-08-18_10-11_c8d5607cbe94.py  2023-08-24_02-10_04e707931d75.py  2023-08-24_19-28_95743a5cd720.py  2023-08-24_19-37_40afa709f873.py  2023-08-25_02-10_04e707931d75.py  2023-09-14_15-33_b1d6fa220d46.py  2023-10-01_11-01_5df56aa8e08c.py  2023-11-15_21-41_4d9969206a08.py  2023-11-29_19-55_3a9ca236cbae.py  2023-11-29_22-54_88bc7e54d44f.py  db8451810874_.py
scripts/: migrate_images.py
vizme/: config.py  exceptions.py  models.py  protocol.py
vizme/broker/: __init__.py
vizme/db/: base.py  connection.py
vizme/tests/: conftest.py  test_author.py
voices/: config.py  exceptions.py  models.py  protocol.py  utils.py
voices/auth/: jwt_token.py
voices/broker/: __init__.py
voices/chat/: __init__.py
voices/cli/: update_likes_comments_count.py
voices/content_filter/: __init__.py
(+48 files in other folders)
